--- a/perl/datebook.master
+++ b/perl/datebook.master
@@ -1,4 +1,8 @@
 Sir Lancelot:837-835-8257:474 Camelot Boulevard, Bath, WY 28356:5/13/69:24500
 Tommy Savage:408-724-0140:1222 Oxbow Court, Sunnyvale, CA 94087:5/19/66:34200
+Karen Evich:530-222-1255:23 Edgecliff Place, Lincoln, NB 92086:7/25/53:85100
 Yukio Takeshida:387-827-1095:13 Uno Lane, Asheville, NC 23556:7/1/29:57000
+Tommy Savage:134-666-8769:93 Xinyuan,Streer,BJ:wq!
+Karen Evich:530-222-1255:23 Edgecliff Place, Lincoln, NB 92086:7/25/53:85100
 Vinh Tranh:438-910-7449:8235 Maple Street, Wilmington, VT 29085:9/23/63:68900
+Karen Evich:530-222-1255:23 Edgecliff Place, Lincoln, NB 92086:7/25/53:85100
